Update #130: vk button visibility. Othe layout fixes

--- a/web/bootstrap/css/style-po-ups.css
+++ b/web/bootstrap/css/style-po-ups.css
@@ -203,9 +203,6 @@
 	top: 18px;
 	left: 35px;
 }
-.popUpTitle2{
-	padding: 5px 0 20px 0;
-}
 #myModal5 {
 	margin-left: -290px;
 	width: 580px;
